--- a/ActivitySystem.PL/ActivitySystem.PL/appsettings.json
+++ b/ActivitySystem.PL/ActivitySystem.PL/appsettings.json
@@ -13,7 +13,7 @@
   },
 
   "ConnectionStrings": {
-    "Defaultconnection": "Data Source = localhost; Initial Catalog = ActivitySystemSQU; User ID = SA; Password = Sss12345;"
+    "Defaultconnection": "Data Source = localhost; Initial Catalog = ActivitySystemSQU; User ID = SA; Password = *******;"
   }
 }
 
